--- a/flexboxLayouts/1_flexStart.html
+++ b/flexboxLayouts/1_flexStart.html
@@ -8,11 +8,16 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Akronim&family=Roboto:ital,wght@0,100;0,400;1,700&display=swap" rel="stylesheet">
 
+	<!---Tag to check device size--->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	
 	
 	<style>
 				
 		body{
 			font-family: 'Roboto', sans-serif;
+			margin: 0;
 		}
 		header{
 			background-color: black;
@@ -37,6 +42,7 @@
 		.flex-container div{
 			background-color: orange;
 			margin: 10px;
+			padding: 20px;
 		}
 	
 		/*div widths*/
@@ -61,8 +67,39 @@
 			flex: 50%;
 		}
 		
+		/*footer goes here*/
 		
 		
+			#item6{
+			flex: 25%;
+		/*over write*/
+			background: transparent;
+		}
+		
+			#item7{
+			flex: 50%;
+		}
+	
+			#item8{
+			flex: 25%;
+		/*over write*/
+			background: transparent;
+		}
+				
+			footer{
+			background-color: #160102;
+			padding: 50px 0px;
+		}
+		
+		/****media query to change style for phones****/
+		@media (max-width:800px){
+		
+          .flex-container {
+            flex-direction: column;
+          }
+        }
+		
+	
 		
 	</style>
 </head>
@@ -86,6 +123,15 @@
 		<div id="item4">4</div>
 		<div id="item5">5</div>
 	</div>
+	
+	<footer>
+		<div class="flex-container">
+			<div id="item6">6</div>
+			<div id="item7">7</div>
+			<div id="item8">8</div>
+		</div>
+	
+	</footer>
 	
 </body>
 </html>
