--- a/flexboxLayouts/index.html
+++ b/flexboxLayouts/index.html
@@ -30,7 +30,7 @@
 			/*this is flexbox element*/
 			display: flex;
 			align-items: center;
-			padding-left: 20px;<h1></h1>
+			padding-left: 20px;
 /*			justify-content: center;*/
 			
 		}
@@ -46,7 +46,6 @@
 		
 		.flex-container div{
 			background-color: orange;
-			margin: 10px;
 			padding: 20px;
 			margin: 0;
 		}
