--- a/flexboxLayouts/index.html
+++ b/flexboxLayouts/index.html
@@ -176,8 +176,8 @@
 		
 		</div>
 		<div id="item3">
-			<button class="btn">Click Here!</button><br>
-			<button class="btn">Click Here!</button>
+			<p><button class="btn">Click Here!</button></p>
+			<p><button class="btn">Click Here!</button></p>
 			
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia explicabo est, obcaecati voluptatum earum dolor dolore saepe porro, voluptate quod quidem labore excepturi. Quaerat officia blanditiis autem id commodi, dicta quia error quae porro quidem ipsum omnis vero deserunt velit! Animi dolor minus, distinctio repellendus dignissimos porro cons.</p>
 			
@@ -203,8 +203,8 @@
 		<div class="flex-container">
 			<div id="item6">
 				
-				<button class="btn">Click Here!</button><br>
-				<button class="btn">Click Here!</button>
+				<p><button class="btn">Click Here!</button></p>
+				<p><button class="btn">Click Here!</button></p>
 			
 				<ul>
 					<li>Something goes here</li>
