--- a/websiteDev/gallery.html
+++ b/websiteDev/gallery.html
@@ -36,8 +36,44 @@
 <!-----------------------------First Section---------------------------->	
 	
 <div class="sect">
+	
+	<div class="gallery">
+	<div class="imgBlock">
+		<a target="_blank" href="images/imageGallery/bicycle.jpg">
+			<img src="images/imageGallery/bicycleThumb.jpg" alt="bike">
+		</a>
+		<div class="desc">Bicyle at the street</div>
+	</div>
+</div>
+<div class="gallery">
+	<div class="imgBlock">
+		<a target="_blank" href="images/imageGallery/cassette.jpg">
+			<img src="images/imageGallery/cassetteThumb.jpg" alt="cassette">
+		 </a>
+		<div class="desc">Old cassette tape</div>
+	</div>
+</div>
+<div class="gallery">
+	<div class="imgBlock">
+		<a target="_blank" href="images/imageGallery/record.jpg">
+			<img src="images/imageGallery/recordThumb.jpg" alt="record">
+		</a>
+		<div class="desc">A Vintage record</div>
+	</div>
+</div>
+<div class="gallery">
+	<div class="imgBlock">
+		<a target="_blank" href="images/imageGallery/tv.jpg">
+			<img src="images/imageGallery/tvThumb.jpg" alt="tv">
+		</a>
+		<div class="desc">Old school TV</div>
+	</div>
+</div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a urna vel leo tristique aliquam ac ac metus. Nunc consectetur dolor turpis, a porttitor nisi vulputate bibendum. Aliquam leo nibh, convallis et rutrum ut, finibus sed turpis. Nunc eros lacus, feugiat quis pellentesque ut, accumsan et quam. Etiam mauris tellus, lacinia sed lectus aliquam, mattis maximus erat. Ut <a href="#">scelerisque</a> purus nec volutpat gravida. Aenean semper eu magna at volutpat. Duis dignissim id lectus vel facilisis. Nulla rhoncus dolor nunc, eget tempus libero vulputate eu. Curabitur ex lacus, mollis sed mollis ac, tincidunt quis arcu. Curabitur dictum lorem pulvinar neque consequat convallis. Aliquam vitae neque libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent a felis finibus, maximus elit ac, fringilla felis. Integer sit amet lectus eros.</p>
+	
+	
+	
+<p class="clearIt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a urna vel leo tristique aliquam ac ac metus. Nunc consectetur dolor turpis, a porttitor nisi vulputate bibendum. Aliquam leo nibh, convallis et rutrum ut, finibus sed turpis. Nunc eros lacus, feugiat quis pellentesque ut, accumsan et quam. Etiam mauris tellus, lacinia sed lectus aliquam, mattis maximus erat. Ut <a href="#">scelerisque</a> purus nec volutpat gravida. Aenean semper eu magna at volutpat. Duis dignissim id lectus vel facilisis. Nulla rhoncus dolor nunc, eget tempus libero vulputate eu. Curabitur ex lacus, mollis sed mollis ac, tincidunt quis arcu. Curabitur dictum lorem pulvinar neque consequat convallis. Aliquam vitae neque libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent a felis finibus, maximus elit ac, fringilla felis. Integer sit amet lectus eros.</p>
 
 <p>
 Aenean vehicula urna nisl, vitae commodo ligula suscipit non. Etiam id enim porta, ullamcorper diam sit amet, tincidunt nisl. Donec sit amet tortor sed nunc imperdiet cursus vel nec eros. Maecenas tincidunt tristique cursus. In cursus velit metus. Aenean vel nunc commodo, sagittis mi sit amet, gravida ipsum. Mauris quis congue orci. In sed metus risus. Nulla vehicula pulvinar risus, et pretium quam. Sed ac scelerisque quam.</p>
