--- a/siteDevelopment/dubai.html
+++ b/siteDevelopment/dubai.html
@@ -37,7 +37,7 @@
 	<div class="flex-container">
 		<div id="item3">
 			
-			<div id="itema"><p>What's happening now?</p>
+			<div id="itema"><p>Hello Dubai!</p>
 			</div>
 				
 				<div id="itemb">		
