--- a/siteDevelopment/dubai.html
+++ b/siteDevelopment/dubai.html
@@ -42,7 +42,7 @@
 				
 				<div id="itemb">		
 				<h2>Uncover a world of wonder</h2>
-				<p>Sunny adventures, incredible cuisine, epic entertainment and the thrilling Expo 2020. Dubai presents the ultimate holiday destination.</p>
+				<p>Dubai presents the ultimate holiday destination. Sunny adventures and epic entertainment.</p>
 
 				<button class="btn1"><a href="https://www.visitdubai.com/en/articles/ultimate-guide-to-expo-2020-dubai" target="_blank">More</a></button>
 			</div>
