--- a/madLibsStory/index.html
+++ b/madLibsStory/index.html
@@ -18,7 +18,9 @@
 	<style>
 		
 		body {
-			padding: 0px 200px 100px 200px;
+			max-width: 960px;
+			margin: auto;
+			padding-bottom: 100px;
 			background-image: url("images/header.jpeg");
 			background-position: center;
 			background-repeat: no-repeat;
@@ -30,11 +32,13 @@
 		#header{ 
 			height: 60vh;
 			font-family: 'Alfa Slab One', cursive;	
+			display: flex;
+			align-items: center;
 		}
 	
 		#header-text{
 			text-align: center;
-			font-size: 70px;
+			font-size: 6vw;
 			color: #E300FF;
 			text-shadow: 5px 5px black;
 		}
@@ -72,6 +76,9 @@
 			border-radius: 10px;
 		}
 		
+		/****media query to change style for phones****/
+		@media (max-width:800px){
+			
 	</style>
 	
 	
@@ -100,11 +107,13 @@
 			
 			<label for="pName">Pet Name:</label>
 				<input type="text" id="pName" name="pName">
-			
-			<label for="fColour">Favourite Colour:</label>
+		</p>
+		
+		<p>	
+			<p>Favourite Colour</p>
+			<label for="fColour"></label>
 				<input type="text" id="fColour" name="fColour">
 		</p>
-				
 	<!-----------radio buttons--------->	
 		<p>
 			
@@ -182,7 +191,7 @@
 	<script>
 	
 	//functions to change content
-	
+		
 		function write(){
 		
 			var favplace = document.getElementById('fPlace').value;
