--- a/madLibsStory/index.html
+++ b/madLibsStory/index.html
@@ -104,7 +104,9 @@
 		<p>
 			<label for="fPlace">Favourite Place:</label>
 				<input type="text" id="fPlace" name="fPlace" autofocus>
-			
+		</p>
+		
+		<p>
 			<label for="pName">Pet Name:</label>
 				<input type="text" id="pName" name="pName">
 		</p>
@@ -127,6 +129,9 @@
 		<p>
 			<label for="fAcces">Favourite Accessory:</label>
 				<input type="text" id="fAcces" name="fAcces">
+		</p>
+		
+		<p>
 			
 			<label for="BfName">Your bestfriend's Name:</label>
 				<input type="text" id="BfName" name="BfName">
@@ -221,7 +226,7 @@
 			
 	//concatenate together strings and variables to create a message
 			
-			document.getElementById('output').innerHTML="<img src='images/beach.jpg' alt='beach'><br><br>";
+			document.getElementById('output').innerHTML="<img src='images/beach.jpg' width='500' alt='beach'><br><br>";
 			document.getElementById('output').innerHTML+="Our family is having a summer trip to "+ favplace+".";
 			document.getElementById('output').innerHTML+=" It is a 6-hour drive away from our town. It is our first time going out of town. We have our cat with us named  " + petname+".";
 			document.getElementById('output').innerHTML+=" She is a white Persian cat with "+favcolour+" eyes. ";
